@@ -10,5 +10,5 @@ testmsg:
 	g++ -g -Wall -o tests/testmsg tests/testmsg.cpp src/cgenericmessagemanager.cpp src/cmessagetype.cpp
 
 testpo:
-	g++ -g -Wall -o tests/testpo src/persistentobject.cpp tests/testpo.cpp src/sourcefile.cpp src/filestream.cpp src/persistentobjectmanager.cpp src/attributehandlerregistry.cpp `pkg-config --cflags --libs libxml++-2.6` `pkg-config --cflags --libs glibmm-2.4` 
+	g++ -g -Wall -o tests/testpo src/persistentobject.cpp tests/testpo.cpp src/sourcefile.cpp src/filestream.cpp src/persistentobjectmanager.cpp src/attributehandlerregistry.cpp `pkg-config --cflags --libs libxml++-2.6` `pkg-config --cflags --libs glibmm-2.4`  -lboost_filesystem
 
