@@ -31,9 +31,10 @@
 
 
 #include "../include/sourcefile.h"
-#include <stddef.h>
-#include <sys/types.h>
-#include <dirent.h>
+#include "boost/filesystem/path.hpp" 
+#include "boost/filesystem/operations.hpp" 
+
+using namespace boost::filesystem;       
 
 
 namespace Viracocha 
@@ -73,51 +74,11 @@ namespace Viracocha
 		bool SourceFile::isFetchable( const string _url)
 		{
 
-			DIR *dp;
-			struct dirent *ep;
-     
-			unsigned int pathLimit = _url.find_last_of("/");
-		
-			string directory = m_path;
-	
-			// Add a trailing '/' to the path
-			if (directory.size())
-			{
-				if (directory[directory.size()-1] != '/')
-				{
-					directory = directory + "/";
-				}
-			}
+   		bool result; 
+			path file( m_path);	
+			file = file / _url;
 
-			// We want the full directory
-			if (pathLimit != string::npos)
-			{
-				directory = directory + _url.substr(0, pathLimit);
-			}
-
-
-			bool result = false;
-			string fileName = _url; // The file we are looking for
-
-			// We want to extract the filename from the directory (if there is any)
-			if (pathLimit != string::npos) 
-			{
-				fileName = _url.substr(pathLimit);
-			}
-
-			// We open the directory and go through it, looking for our file
-			dp = opendir (directory.c_str());
-			if (dp != NULL)
-         {
-           while ((ep = readdir (dp)) && (result == false))
-			  {
-             if (ep->d_name == fileName)
-				{
-					result = true;
-				}
-				}
-           (void) closedir (dp);
-         }
+			result = exists( m_path );
 
 		 	return result;
 
